--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
-bokeh==3.0.3
-contourpy==1.0.7
+bokeh==3.3.3
+contourpy==1.2.0
 geographiclib==2.0
-geopy==2.3.0
-gpxpy==1.5.0
-Jinja2==3.1.2
-MarkupSafe==2.1.2
-numpy==1.24.2
-packaging==23.0
-pandas==1.5.3
-Pillow==9.4.0
+geopy==2.4.1
+gpxpy==1.6.2
+Jinja2==3.1.3
+MarkupSafe==2.1.3
+numpy==1.26.3
+packaging==23.2
+pandas==2.1.4
+pillow==10.2.0
 python-dateutil==2.8.2
-pytz==2022.7.1
-PyYAML==6.0
+pytz==2023.3.post1
+PyYAML==6.0.1
 six==1.16.0
-tornado==6.2
-xyzservices==2022.9.0
+tornado==6.4
+tzdata==2023.4
+xyzservices==2023.10.1
